--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2024"
 
 [dependencies]
 anyhow = "1.0.97"
-crossterm = "0.28.1"
-ratatui = "0.29.0"
+crossterm = "0.29.0"
+ratatui = { version = "0.29.0", features = ["unstable-widget-ref"] }
 resvg = "0.45.0"
 run = "0.1.0"
